--- a/index.html.html
+++ b/index.html.html
@@ -136,7 +136,7 @@
     <div class="price"><span>DESDE</span> $49.900</div>
     <small>POR TRAYECTO</small>
     <br>
-    <a href="https://latamviajespromoscolweb.com/Web-Co/" class="btn">¡COMPRA YA! →</a>
+    <a href="" class="btn">¡COMPRA YA! →</a>
     <div class="extra-text">
       ¡NO TE PIERDAS ESTA OPORTUNIDAD ÚNICA DE VIAJAR BARATO Y RÁPIDO!
     </div>
